<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#202460"
    tools:context=".MainActivity">

     <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/question_number"
        android:id="@+id/QuestionNumber"
        android:textColor="#ffa9"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="20sp"
         >

        </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        >

        <ProgressBar
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#33cc5a"
            android:layout_gravity="bottom"
            android:id="@+id/progressbar"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:indeterminate="false">

        </ProgressBar>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:layout_marginBottom="60dp"
        android:layout_marginTop="70dp"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/question_1"
            android:textColor="@color/white"
            android:id="@+id/question"
            android:textSize="25dp">

        </TextView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/FirstTwoOptions"
        android:layout_gravity="center"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/optionA"
            android:text="@string/question1_A"
            android:background="@drawable/optiondesign"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:paddingTop="14dp">

        </TextView>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/optionB"
            android:layout_marginTop="10dp"
            android:text="@string/question1_B"
            android:background="@drawable/optiondesign"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:paddingTop="14dp">

        </TextView>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/RemainingTwoOptions"
        android:layout_gravity="center"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/optionC"
            android:layout_marginTop="10dp"
            android:text="@string/question1_C"
            android:background="@drawable/optiondesign"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:paddingTop="14dp">

        </TextView>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/optionD"
            android:layout_marginTop="10dp"
            android:text="@string/question1_D"
            android:background="@drawable/optiondesign"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:paddingTop="14dp">

        </TextView>

    </LinearLayout>



</LinearLayout>